<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.app.project.tres">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <TextView
        android:id="@+id/dd"
        android:layout_below="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ree"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/tex1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dd"
        android:hint="@string/add"
        />
    <EditText
        android:id="@+id/tex2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tex1"
        android:hint="@string/add"
        />
    <Button android:id="@+id/bot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_below="@id/tex2"
        android:layout_centerHorizontal="true"
        android:background="#5a2a2dde"
        android:onClick="viajar"/>

</RelativeLayout>
